WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
195958
REGRESSION (
r239904
): Update dark mode defines in a few places that got missed
https://bugs.webkit.org/show_bug.cgi?id=195958
Summary
REGRESSION (r239904): Update dark mode defines in a few places that got missed
Timothy Hatcher
Reported
2019-03-19 11:39:35 PDT
The default text color on non-dark mode systems was broken by
r239904
. <
rdar://problem/47678852
>
Attachments
Patch
(4.17 KB, patch)
2019-03-19 11:41 PDT
,
Timothy Hatcher
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews103 for mac-highsierra
(3.36 MB, application/zip)
2019-03-19 12:44 PDT
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews107 for mac-highsierra-wk2
(3.82 MB, application/zip)
2019-03-19 12:50 PDT
,
EWS Watchlist
no flags
Details
Patch
(12.37 KB, patch)
2019-03-19 13:21 PDT
,
Timothy Hatcher
no flags
Details
Formatted Diff
Diff
Test Fix
(1.05 KB, patch)
2019-03-20 11:22 PDT
,
Timothy Hatcher
no flags
Details
Formatted Diff
Diff
Test Gardening
(7.95 KB, patch)
2019-03-20 13:42 PDT
,
Timothy Hatcher
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-cq-01 for mac-highsierra
(3.37 MB, application/zip)
2019-03-20 14:44 PDT
,
WebKit Commit Bot
no flags
Details
Test Gardening
(57.30 KB, patch)
2019-03-20 15:55 PDT
,
Timothy Hatcher
no flags
Details
Formatted Diff
Diff
Show Obsolete
(5)
View All
Add attachment
proposed patch, testcase, etc.
Timothy Hatcher
Comment 1
2019-03-19 11:41:54 PDT
Comment hidden (obsolete)
Created
attachment 365192
[details]
Patch
EWS Watchlist
Comment 2
2019-03-19 12:44:55 PDT
Comment hidden (obsolete)
Comment on
attachment 365192
[details]
Patch
Attachment 365192
[details]
did not pass mac-ews (mac): Output:
https://webkit-queues.webkit.org/results/11568971
New failing tests: inspector/css/shadow-scoped-style.html printing/width-overflow.html
EWS Watchlist
Comment 3
2019-03-19 12:44:56 PDT
Comment hidden (obsolete)
Created
attachment 365211
[details]
Archive of layout-test-results from ews103 for mac-highsierra The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews103 Port: mac-highsierra Platform: Mac OS X 10.13.6
EWS Watchlist
Comment 4
2019-03-19 12:50:45 PDT
Comment hidden (obsolete)
Comment on
attachment 365192
[details]
Patch
Attachment 365192
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
https://webkit-queues.webkit.org/results/11568944
New failing tests: inspector/css/shadow-scoped-style.html printing/width-overflow.html
EWS Watchlist
Comment 5
2019-03-19 12:50:48 PDT
Comment hidden (obsolete)
Created
attachment 365212
[details]
Archive of layout-test-results from ews107 for mac-highsierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews107 Port: mac-highsierra-wk2 Platform: Mac OS X 10.13.6
Timothy Hatcher
Comment 6
2019-03-19 13:21:15 PDT
Created
attachment 365219
[details]
Patch
WebKit Commit Bot
Comment 7
2019-03-19 13:56:37 PDT
Comment on
attachment 365219
[details]
Patch Clearing flags on attachment: 365219 Committed
r243169
: <
https://trac.webkit.org/changeset/243169
>
WebKit Commit Bot
Comment 8
2019-03-19 13:56:38 PDT
All reviewed patches have been landed. Closing bug.
Shawn Roberts
Comment 9
2019-03-19 17:30:20 PDT
This revision is causing the following test to be a 100% text diff failure. css-dark-mode/default-colors.html Reproduced locally, fails in
r243169
, passes in
r243168
. Reproduced with : run-webkit-tests css-dark-mode/default-colors.html --iterations 10 -f Flakiness Dashboard:
https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=css-dark-mode%2Fdefault-colors.html
Diff: --- /Volumes/Data/slave/mojave-release-tests-wk2/build/layout-test-results/css-dark-mode/default-colors-expected.txt +++ /Volumes/Data/slave/mojave-release-tests-wk2/build/layout-test-results/css-dark-mode/default-colors-actual.txt @@ -5,6 +5,6 @@ PASS Body text color is black, since the page hasn't set a supported color scheme PASS View base background color is white, since the page hasn't set a supported color scheme PASS Set prefers-color-schemes: light dark on the body -PASS Body text color is white +FAIL Body text color is white assert_equals: expected "rgb(255, 255, 255)" but got "rgb(0, 0, 0)" PASS View base background color is a dark grey
Shawn Roberts
Comment 10
2019-03-19 17:42:50 PDT
This revision is also causing a 100% text diff failure in the following test as well : inspector/css/force-page-appearance.html Same reproduction steps. Fails in 243169, passes in 243168 Flakiness Dashboard:
https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=inspector%2Fcss%2Fforce-page-appearance.html
Diff: --- /Volumes/Data/slave/mojave-release-tests-wk2/build/layout-test-results/inspector/css/force-page-appearance-expected.txt +++ /Volumes/Data/slave/mojave-release-tests-wk2/build/layout-test-results/inspector/css/force-page-appearance-actual.txt @@ -13,14 +13,18 @@ PASS: WI.cssManager.forcedAppearance should be Dark. PASS: DOMNodeStyles should need refresh. PASS: expectEqual("200px", "200px") -PASS: expectEqual("rgb(255, 255, 255)", "rgb(255, 255, 255)") +FAIL: expectEqual("rgb(0, 0, 0)", "rgb(255, 255, 255)") + Expected: "rgb(255, 255, 255)" + Actual: "rgb(0, 0, 0)" -- Running test case: Switch to Dark appearance by default PASS: WI.cssManager.defaultAppearance should be Dark. PASS: WI.cssManager.forcedAppearance should be Dark. PASS: DOMNodeStyles should need refresh. PASS: expectEqual("200px", "200px") -PASS: expectEqual("rgb(255, 255, 255)", "rgb(255, 255, 255)") +FAIL: expectEqual("rgb(0, 0, 0)", "rgb(255, 255, 255)") + Expected: "rgb(255, 255, 255)" + Actual: "rgb(0, 0, 0)" -- Running test case: Force appearance to Light PASS: WI.cssManager.defaultAppearance should be Dark. @@ -34,5 +38,7 @@ PASS: WI.cssManager.forcedAppearance should be null. PASS: DOMNodeStyles should need refresh. PASS: expectEqual("200px", "200px") -PASS: expectEqual("rgb(255, 255, 255)", "rgb(255, 255, 255)") +FAIL: expectEqual("rgb(0, 0, 0)", "rgb(255, 255, 255)") + Expected: "rgb(255, 255, 255)" + Actual: "rgb(0, 0, 0)"
Timothy Hatcher
Comment 11
2019-03-20 11:22:20 PDT
Created
attachment 365364
[details]
Test Fix
Timothy Hatcher
Comment 12
2019-03-20 11:41:48 PDT
Reopened to land fix.
WebKit Commit Bot
Comment 13
2019-03-20 12:57:30 PDT
Comment on
attachment 365364
[details]
Test Fix Clearing flags on attachment: 365364 Committed
r243229
: <
https://trac.webkit.org/changeset/243229
>
WebKit Commit Bot
Comment 14
2019-03-20 12:57:32 PDT
All reviewed patches have been landed. Closing bug.
Timothy Hatcher
Comment 15
2019-03-20 13:41:56 PDT
Reopened for test gardening.
Timothy Hatcher
Comment 16
2019-03-20 13:42:12 PDT
Comment hidden (obsolete)
Created
attachment 365392
[details]
Test Gardening
WebKit Commit Bot
Comment 17
2019-03-20 14:44:00 PDT
Comment hidden (obsolete)
Comment on
attachment 365392
[details]
Test Gardening Rejecting
attachment 365392
[details]
from commit-queue. New failing tests: inspector/css/shadow-scoped-style.html printing/width-overflow.html Full output:
https://webkit-queues.webkit.org/results/11584601
WebKit Commit Bot
Comment 18
2019-03-20 14:44:02 PDT
Comment hidden (obsolete)
Created
attachment 365403
[details]
Archive of layout-test-results from webkit-cq-01 for mac-highsierra The attached test failures were seen while running run-webkit-tests on the commit-queue. Bot: webkit-cq-01 Port: mac-highsierra Platform: Mac OS X 10.13.6
Timothy Hatcher
Comment 19
2019-03-20 15:55:52 PDT
Created
attachment 365420
[details]
Test Gardening
WebKit Commit Bot
Comment 20
2019-03-20 16:36:11 PDT
Comment on
attachment 365420
[details]
Test Gardening Clearing flags on attachment: 365420 Committed
r243257
: <
https://trac.webkit.org/changeset/243257
>
WebKit Commit Bot
Comment 21
2019-03-20 16:36:13 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug