REGRESSION (r239904): Update dark mode defines in a few places that got missed. https://bugs.webkit.org/show_bug.cgi?id=195958

Reviewed by Megan Gardner.

Source/WebCore:

* DerivedSources.make: Support HAVE_OS_DARK_MODE_SUPPORT in html.css.
* css/html.css: Update dark mode defines.
* page/FrameView.cpp:
(WebCore::FrameView::updateBackgroundRecursively): Ditto.

LayoutTests:

* inspector/css/shadow-scoped-style-expected.txt: Rebaseline.
* platform/mac/printing/width-overflow-expected.txt: Rebaseline.


Canonical link: https://commits.webkit.org/210238@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@243169 268f45cc-cd09-0410-ab3c-d52691b4dbfc